# Agentic-IT-Helpdesk

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
app/: streamlit_app.py
demo/: demo-script.md
docs/: architecture-diagram.mmd  architecture.md  deployment.md  evaluation.md  security.md
docs/phase-1/: data-inventory-and-privacy.md  personas-and-workflows.md  phase-1-gate-report.md  product-requirements.md  success-metrics-and-acceptance.md
docs/phase-2/: api-contracts-and-repository-plan.md  architecture-diagram.mmd  architecture-specification.md  data-flow-diagram.mmd  langgraph-state-and-flow.md  phase-2-gate-report.md  threat-model-and-approval-gates.md
docs/phase-3/: phase-3-gate-report.md  rag-pipeline.md  retrieval-fixtures.md
docs/phase-4/: agent-tools-and-approval.md  phase-4-gate-report.md
docs/phase-5/: phase-5-gate-report.md  ui-api-integration.md
docs/phase-6/: evaluation-suite.md  phase-6-gate-report.md  qa-report.md
docs/phase-7/: phase-7-gate-report.md  privacy-review.md  security-acceptance-checklist.md  security-review.md
docs/phase-8/: dependency-and-license-review.md  final-deliverable.md  phase-8-gate-report.md  release-checklist.md
evals/cases/: support_eval_cases.json
evals/fixtures/: retrieval_cases.json
sample_data/: README.md
src/itsupport_copilot/: __init__.py
tests/unit/: test_agent_workflow.py  test_evaluation_suite.py  test_phase5_integration.py  test_rag_pipeline.py  test_security_validation.py  test_sqlite_storage.py
(+56 files in other folders)
